Bugfixes * shortened the self.generatedCommand function by removing duplicated code. * resolved a weird bug where file dialog configs would generate a command with an extra space at the end of each config * fixed the scrolling so that if you have a gazillion pwads, you don't have to scroll down to click the one you want, then scroll back up to edit its details * added styling to scroll bars * #21 - files are stored as relative paths, but are run as absolute paths.  Also removed the ability to switch between absolute and relative since what's the point now * #20 - Pwads are now sorted in alphabetical order (will sort by filename if human-readable name is not available)     * added new test data to test this * #18 - now when you choose to hide a pwad, it won't show up in the available pwads you can choose from (but makes no effort to hide ones you may have chosen already)     * moved the hide function inside of the file edit pane

--- a/src/app.css
+++ b/src/app.css
@@ -46,3 +46,25 @@ h4,
 h5 {
     font-family: 'Ubuntu-Medium';
 }
+ 
+ 
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: #1c1e1f;
+    color: #c5c1b9;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #2a2c2e;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #323537;
+}
+::-webkit-scrollbar-thumb:active {
+    background-color: #3d4043;
+}
+::-webkit-scrollbar-corner {
+    background-color: #181a1b;
+}
+* {
+    scrollbar-color: #2a2c2e #1c1e1f;
+}
